@@ -1340,6 +1340,19 @@ If @var{op} is NaN or an infinity, then the corresponding double precision
 value is returned, and @var{exp} is undefined.
 @end deftypefun
 
+@deftypefun int mpfr_frexp (mpfr_exp_t *@var{exp}, mpfr_t @var{y}, mpfr_t @var{x}, mpfr_rnd_t @var{rnd})
+Set @var{exp}
+(formally, the value pointed to by @var{exp}) and @var{y}
+such that @math{0.5@le{}@GMPabs{@var{y}}<1}
+and @m{@var{y}\times 2^{exp}, @var{d} times 2 raised to @var{exp}} equals
+@var{x} rounded to the precision of @var{y}, using the given rounding mode.
+@comment See ISO C standard, frexp function.
+If @var{x} is zero, then a zero of the same sign is returned, and
+@var{exp} is set to 0.
+If @var{x} is NaN or an infinity, then the same value is returned,
+and @var{exp} is undefined.
+@end deftypefun
+
 @deftypefun mpfr_exp_t mpfr_get_z_2exp (mpz_t @var{rop}, mpfr_t @var{op})
 Put the scaled significand of @var{op} (regarded as an integer, with the
 precision of @var{op}) into @var{rop}, and return the exponent @var{exp}
