@@ -3,7 +3,7 @@
    gaussian distribution and round it to the precision of rop1, rop2
    according to the given rounding mode.
 
-Copyright 2000, 2001, 2002, 2003, 2004, 2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
+Copyright 2011 Free Software Foundation, Inc.
 Contributed by the Arenaire and Caramel projects, INRIA.
 
 This file is part of the GNU MPFR Library.
@@ -24,7 +24,7 @@ http://www.gnu.org/licenses/ or write to the Free Software Foundation, Inc.,
 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA. */
 
 
-#define MPFR_NEED_LONGLONG_H
+/* #define MPFR_NEED_LONGLONG_H */
 #include "mpfr-impl.h"
 
 
